# Data_Science_Statistics

./: .gitignore  CTL.ipynb  CTL_for_web_.ipynb  README.md  descriptive_visualisation.ipynb  intro.ipynb  pebble_world.ipynb  probability.ipynb  pyproject.toml
datasets/: brain_data.csv  height_data.csv
master_card/: README.MD  model_mc.py  model_mc_2.py  model_mc_3.py  model_mc_4.py  model_mc_tom.py
workshop/: bimodal_distr.ipynb  exercises.ipynb  exercises_2.ipynb  exercises_3.ipynb  exercises_4.ipynb  exercises_5.ipynb
