[project]
name = "stats"
version = "0.1.0"
description = "A collection of Jupyter Notebook exercises covering key statistical concepts for Data Science, featuring interactive visualizations and real-world datasets."
authors = ["Piotr Lipinski <kinetics20@gmail.com>"]
license = "Beerware"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bokeh>=3.7.3",
    "imbalanced-learn>=0.13.0",
    "ipympl>=0.9.7",
    "ipython>=9.2.0",
    "jupyterlab>=4.4.1",
    "matplotlib>=3.10.1",
    "matplotlib-venn>=1.1.2",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "plotly>=6.1.1",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "xgboost>=3.0.1",
]
